RESOLVED FIXED212932
WebKit.ShrinkToFit is failing on some bots
https://bugs.webkit.org/show_bug.cgi?id=212932
Summary WebKit.ShrinkToFit is failing on some bots
Tim Horton
Reported 2020-06-08 15:57:12 PDT
WebKit.ShrinkToFit is failing on some bots
Attachments
Patch (4.88 KB, patch)
2020-06-08 15:57 PDT, Tim Horton
no flags
Patch (4.90 KB, patch)
2020-06-08 16:05 PDT, Tim Horton
no flags
Patch (5.80 KB, patch)
2020-06-09 11:05 PDT, Tim Horton
no flags
Tim Horton
Comment 1 2020-06-08 15:57:32 PDT
Tim Horton
Comment 2 2020-06-08 15:57:34 PDT
Simon Fraser (smfr)
Comment 3 2020-06-08 15:59:48 PDT
Comment on attachment 401389 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=401389&action=review > Tools/TestWebKitAPI/Tests/WebKitCocoa/ShrinkToFit.mm:66 > + // This is 85 instead of 100 because we now have a scrollbar. Does the "now" refer to "after this fix" or "now that the test has done something"? Remove it if the former.
Tim Horton
Comment 4 2020-06-08 16:05:02 PDT
The latter. I will clarify the comment.
Tim Horton
Comment 5 2020-06-08 16:05:56 PDT
Tim Horton
Comment 6 2020-06-09 11:05:13 PDT
EWS
Comment 7 2020-06-09 11:46:25 PDT
Committed r262800: <https://trac.webkit.org/changeset/262800> All reviewed patches have been landed. Closing bug and clearing flags on attachment 401452 [details].
Darin Adler
Comment 8 2020-06-09 11:52:28 PDT
Comment on attachment 401452 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=401452&action=review > Tools/TestWebKitAPI/mac/mainMac.mm:43 > + // CAUTION: Defaults set here are not automatically propagated to the > + // Web Content process. Those listed below are propagated manually. I find this comment slightly mysterious. After reading the patch and the comments in the bug, I think we mean that WebKit *itself* happens to propagate all of these (maybe a pointer to the code that does it would help since this test tool *is* part of WebKit), but we could also be referring to some other part of TestWebKitAPI doing it.
Tim Horton
Comment 9 2020-06-09 13:58:13 PDT
Comment on attachment 401452 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=401452&action=review >> Tools/TestWebKitAPI/mac/mainMac.mm:43 >> + // Web Content process. Those listed below are propagated manually. > > I find this comment slightly mysterious. After reading the patch and the comments in the bug, I think we mean that WebKit *itself* happens to propagate all of these (maybe a pointer to the code that does it would help since this test tool *is* part of WebKit), but we could also be referring to some other part of TestWebKitAPI doing it. I did mean WebKit, yes. Mostly trying to call out "if you add another default here it will not magically make it to the WP". Maybe it can be reworded.
Note You need to log in before you can comment on or make changes to this bug.